PTC-4: MeterValue Endpoints are added and the business code is developed
